--- a/01_Logique/Cours/style/enteteXP.tex
+++ b/01_Logique/Cours/style/enteteXP.tex
@@ -33,9 +33,9 @@
 
 \fancyfoot[C]{\footnotesize{\bfseries \thepage}}
 \fancyfoot[L]{%
-\begin{minipage}[c]{.2\linewidth}
+%\begin{minipage}[c]{.2\linewidth}
 \noindent\footnotesize{{\xxauteur}}
-\end{minipage}
+%\end{minipage}
 }
 
 \ifthenelse{\boolean{prof}}{%
