--- a/01_Logique/TD_01/style/enteteXP.tex
+++ b/01_Logique/TD_01/style/enteteXP.tex
@@ -42,11 +42,11 @@
 \fancyfoot[R]{\footnotesize{\xxpied}}}
 
 \begin{center}
- \huge\textsc{\xxtitre}
+ \ifthenelse{\boolean{td}}{\Large\textsc{\xxtitre}}{\huge\textsc{\xxtitre}}
 \end{center}
 
 \begin{center}
- \LARGE\textsc{\xxsoustitre}
+ \ifthenelse{\boolean{td}}{\large\textsc{\xxsoustitre}}{\large\textsc{\xxsoustitre}}
 \end{center}
 
 \vspace{.5cm}
