--- a/01_Logique/Applications/01_Logique_Applications.tex
+++ b/01_Logique/Applications/01_Logique_Applications.tex
@@ -109,7 +109,7 @@ Trois interrupteurs $a$, $b$, $c$ commandent l’allumage de deux lampes $R$ et 
 \begin{minipage}[c]{.62\linewidth}
 Considérons le système logique à 4 entrées $x_1$, $x_2$, $x_3$ et $x_4$ et 4 sorties $z_1$, $z_2$, $z_3$ et $z_4$ qui reçoit sur ses entrées le code binaire réfléchi d’un chiffre décimal et produit en sorties le code à excès de trois correspondant. Le code à excès de 3 d’un chiffre décimal $A$ est égal au code binaire naturel du nombre $A+3$. Un tel système est appelé transcodeur. La table de vérité suivante définit les 4 fonctions logiques réalisées par ce système. 
 \subparagraph{}
-\textit{Écrire les expressions minimales de chacune des 4 fonctions réalisées par le transcodeur. Il faudra tenir compte des combinaisons non utilisées.}
+\textit{Écrire les expressions minimales de chacune des 4 fonctions réalisées par le transcodeur.}% Il faudra tenir compte des combinaisons non utilisées.}
 \subparagraph{}
 \textit{Faire le logigramme correspondant aux 4 fonctions ainsi déterminées.}
 \end{minipage}\hfill
@@ -198,7 +198,7 @@ critères : poids $P$, longueur $Lo$, largeur $la$, hauteur $H$. 1 correspond à
 \end{itemize}
 
 \subparagraph{}
-\textit{Faire les tables de vérité et les tableaux de Karnaugh si nécessaire et écrivez les équations des fonctions $A$, $B$ et $C$.}
+\textit{Faire les tables de vérité et écrivez les équations des fonctions $A$, $B$ et $C$.}
 
 \subparagraph{}
 \textit{Simplifier ces équations.}
