--- a/01_Logique/TD_02/01_Logique_TD_02.tex
+++ b/01_Logique/TD_02/01_Logique_TD_02.tex
@@ -135,7 +135,7 @@ Le système est composé de :
 \end{itemize}
 
 
-La vanne d'alimentation en eau s'ouvre lorsque le niveau haut est atteint. Elle ne peut en aucun cas s'ouvrir si ce niveau est détecté.
+La vanne d'alimentation en eau s'ouvre lorsque le niveau bas est détecté ou par action sur le bouton m. La vanne se ferme lorsque le niveau haut est atteint. Elle ne peut en aucun cas s'ouvrir si ce niveau est détecté.
 
 \subparagraph{}
 \textit{Donner le schéma des entrées--sorties de la partie commande.}
