--- a/02_Sequentiel/TD_01_Chronogramme/CI_05_02_Sequentiel_TD_Chronogramme.tex
+++ b/02_Sequentiel/TD_01_Chronogramme/CI_05_02_Sequentiel_TD_Chronogramme.tex
@@ -176,8 +176,8 @@ Les 2 capteurs permettent d’acquérir l’état de l’air dans le tunnel :
 \item la variable associée au capteur de gaz $CO_2$ est notée $CO2$.
 \end{itemize}
 
-Dans un premier temps, on souhaite décrire le comportement de la ventilation tel que le cahier
-des charges fonctionnel.
+Dans un premier temps, on souhaite décrire le comportement de la ventilation en accord avec le cahier
+des charges fonctionnel présenté ci-dessous.
 
 Le premier ventilateur $Fan1$ est toujours commandé afin de créer un léger flux d’air dans le
 tunnel. Le second ventilateur $Fan2$ est commandé (ventilateur $Fan3$ non commandé) lorsque la
